--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,11 @@
 .nav-links {
     @apply border-b-2 border-transparent hover:border-white transition-colors
 }
+
+.input-field {
+    @apply flex justify-center items-start text-swm-blue flex-col min-w-80 p-5 
+}
+
+.input-field input {
+    @apply border-2 border-swm-blue px-3 py-2 rounded-xl w-full
+}
